--- a/pages/stardescontos.html
+++ b/pages/stardescontos.html
@@ -43,17 +43,14 @@
         <div class="conteiner">
             <div class="conteiner_conteudo">
                 <div class="text_stardescontos">
-                    <p>Essa ideia surgiu devido ao interesse de melhorarmos
-                        os beneficios para nossos associados. <br>
-                        Queremos entregar muito mais para você associado.
-                        Nosso intuito com esses descontos é poder te proporcionar
-                        mais qualidade não somente com a proteção do seu veiculo, mas também
-                        para seu dia a dia com os descontos que só a Star oferece.
-                        Já estamos atuando com os beneficios em Pouso Redondo, Taió e agrolândia e caso
-                        você associado que tem algum estabelcimento ou presta algum tipo de serviços
-                        e gostaria de estar dentro também dessa parceria entre em contato conosco, é so clicar no botão
-                        abaixo e ja estaremos
-                        entrando em contato com você.
+                    <p>Essa ideia surgiu do nosso interesse em melhorar os benefícios oferecidos aos nossos associados.
+                        Queremos entregar muito mais para você, associado!
+                        Nosso objetivo com esses descontos é proporcionar mais qualidade, não apenas na proteção do seu veículo, mas também no seu dia a dia, com vantagens exclusivas que só a Star oferece.
+                        
+                        Já estamos atuando com esses benefícios nas cidades de Pouso Redondo, Taió e Agrolândia.
+                        Se você é associado e possui um estabelecimento ou presta algum tipo de serviço, e gostaria de fazer parte dessa parceria, entre em contato conosco!
+                        
+                        É só clicar no botão abaixo que entraremos em contato com você.
                     </p>
                 </div>
                 <div class="button_cadastro">
