--- a/pages/sobrenos.html
+++ b/pages/sobrenos.html
@@ -43,23 +43,10 @@
         <div class="conteiner">
             <div class="conteiner_conteudo">
                 <div class="text_sobrenos">
-                    <p>Em setembro de 2014, empresários do
-                        segmento de transportes, perceberam
-                        que o custo com as seguradoras estava
-                        muito elevado.
-                        Então, em conjunto com outras transportadoras, criaram uma
-                        associação entre eles a fim de reduzir os
-                        custos exorbitantes impostos pelas
-                        seguradoras e garantir proteção total
-                        para toda a frota de seus caminhões.
-                        Portanto, a Star Proteção Veicular nasceu
-                        de uma necessidade, não de um
-                        comércio.
-                        Tudo isso, faz da Star uma das maiores e
-                        melhores Associações de Benefícios do
-                        Sul do Brasil, que está à disposição do
-                        mercado para associados que buscam
-                        proteção veicular de verdade.</p>
+                    <p>Em setembro de 2014, empresários do segmento de transportes perceberam que os custos com seguradoras estavam muito elevados. Então, em conjunto com outras transportadoras, criaram uma associação com o objetivo de reduzir os valores exorbitantes impostos pelas seguradoras e garantir proteção total para toda a frota de seus caminhões.
+                    Portanto, a Star Proteção Veicular nasceu de uma necessidade — não de um negócio.
+                    Essa origem torna a Star uma das maiores e melhores Associações de Benefícios do Sul do Brasil, estando à disposição de associados que buscam proteção veicular de verdade.
+                    </p>
                 </div>
             </div>
         </div>
