--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                         <label for="itu">Ituporanga</label>
                                     </div>
                                     <div class="filtro_cidade">
-                                        <input type="radio" name="cidade" id="vm" value="Vilda Ramos">
+                                        <input type="radio" name="cidade" id="vm" value="Vidal Ramos">
                                         <label for="vm">Vidal Ramos</label>
                                     </div>
                                 </div>
